test/parser/expressions/__snapshots__/assign.ts.snap
// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Expressions - Assign > Expressions - Assign (fail) > "x" = 42; 1`] = `
"SyntaxError [1:4-1:5]: Invalid left-hand side in assignment
> 1 | "x" = 42;
    |     ^ Invalid left-hand side in assignment"
`;

exports[`Expressions - Assign > Expressions - Assign (fail) > (([a])=0); 1`] = `
"SyntaxError [1:6-1:7]: Invalid left-hand side in assignment
> 1 | (([a])=0);
    |       ^ Invalid left-hand side in assignment"
`;

exports[`Expressions - Assign > Expressions - Assign (fail) > (({a})=0); 1`] = `
"SyntaxError [1:6-1:7]: Invalid left-hand side in assignment
> 1 | (({a})=0);
    |       ^ Invalid left-hand side in assignment"
`;

exports[`Expressions - Assign > Expressions - Assign (fail) > ([(a = b)] = [] 1`] = `
"SyntaxError [1:13-1:14]: Invalid left-hand side in assignment
> 1 | ([(a = b)] = []
    |              ^ Invalid left-hand side in assignment"
`;

exports[`Expressions - Assign > Expressions - Assign (fail) > [(a = 0)] = 1 1`] = `
"SyntaxError [1:12-1:13]: Invalid left-hand side in assignment
> 1 | [(a = 0)] = 1
    |             ^ Invalid left-hand side in assignment"
`;

exports[`Expressions - Assign > Expressions - Assign (fail) > 42 = 42; 1`] = `
"SyntaxError [1:3-1:4]: Invalid left-hand side in assignment
> 1 | 42 = 42;
    |    ^ Invalid left-hand side in assignment"
`;

exports[`Expressions - Assign > Expressions - Assign (fail) > a = b + c = d 1`] = `
"SyntaxError [1:10-1:11]: Invalid left-hand side in assignment
> 1 | a = b + c = d
    |           ^ Invalid left-hand side in assignment"
`;

exports[`Expressions - Assign > Expressions - Assign (pass) > ((a)) = b; 1`] = `
{
  "body": [
    {
      "expression": {
        "left": {
          "name": "a",
          "type": "Identifier",
        },
        "operator": "=",
        "right": {
          "name": "b",
          "type": "Identifier",
        },
        "type": "AssignmentExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Expressions - Assign > Expressions - Assign (pass) > (a) = b; 1`] = `
{
  "body": [
    {
      "expression": {
        "left": {
          "name": "a",
          "type": "Identifier",
        },
        "operator": "=",
        "right": {
          "name": "b",
          "type": "Identifier",
        },
        "type": "AssignmentExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Expressions - Assign > Expressions - Assign (pass) > a %= b 1`] = `
{
  "body": [
    {
      "expression": {
        "left": {
          "name": "a",
          "type": "Identifier",
        },
        "operator": "%=",
        "right": {
          "name": "b",
          "type": "Identifier",
        },
        "type": "AssignmentExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Expressions - Assign > Expressions - Assign (pass) > a &&= b 1`] = `
{
  "body": [
    {
      "expression": {
        "left": {
          "name": "a",
          "type": "Identifier",
        },
        "operator": "&&=",
        "right": {
          "name": "b",
          "type": "Identifier",
        },
        "type": "AssignmentExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Expressions - Assign > Expressions - Assign (pass) > a **= b 1`] = `
{
  "body": [
    {
      "expression": {
        "left": {
          "name": "a",
          "type": "Identifier",
        },
        "operator": "**=",
        "right": {
          "name": "b",
          "type": "Identifier",
        },
        "type": "AssignmentExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Expressions - Assign > Expressions - Assign (pass) > a *= b 1`] = `
{
  "body": [
    {
      "expression": {
        "left": {
          "name": "a",
          "type": "Identifier",
        },
        "operator": "*=",
        "right": {
          "name": "b",
          "type": "Identifier",
        },
        "type": "AssignmentExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Expressions - Assign > Expressions - Assign (pass) > a += b 1`] = `
{
  "body": [
    {
      "expression": {
        "left": {
          "name": "a",
          "type": "Identifier",
        },
        "operator": "+=",
        "right": {
          "name": "b",
          "type": "Identifier",
        },
        "type": "AssignmentExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Expressions - Assign > Expressions - Assign (pass) > a /= b 1`] = `
{
  "body": [
    {
      "expression": {
        "left": {
          "name": "a",
          "type": "Identifier",
        },
        "operator": "/=",
        "right": {
          "name": "b",
          "type": "Identifier",
        },
        "type": "AssignmentExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Expressions - Assign > Expressions - Assign (pass) > a <<= b 1`] = `
{
  "body": [
    {
      "expression": {
        "left": {
          "name": "a",
          "type": "Identifier",
        },
        "operator": "<<=",
        "right": {
          "name": "b",
          "type": "Identifier",
        },
        "type": "AssignmentExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Expressions - Assign > Expressions - Assign (pass) > a = ((b)) = c; 1`] = `
{
  "body": [
    {
      "end": 14,
      "expression": {
        "end": 13,
        "left": {
          "end": 1,
          "loc": {
            "end": {
              "column": 1,
              "line": 1,
            },
            "start": {
              "column": 0,
              "line": 1,
            },
          },
          "name": "a",
          "range": [
            0,
            1,
          ],
          "start": 0,
          "type": "Identifier",
        },
        "loc": {
          "end": {
            "column": 13,
            "line": 1,
          },
          "start": {
            "column": 0,
            "line": 1,
          },
        },
        "operator": "=",
        "range": [
          0,
          13,
        ],
        "right": {
          "end": 13,
          "left": {
            "end": 7,
            "loc": {
              "end": {
                "column": 7,
                "line": 1,
              },
              "start": {
                "column": 6,
                "line": 1,
              },
            },
            "name": "b",
            "range": [
              6,
              7,
            ],
            "start": 6,
            "type": "Identifier",
          },
          "loc": {
            "end": {
              "column": 13,
              "line": 1,
            },
            "start": {
              "column": 4,
              "line": 1,
            },
          },
          "operator": "=",
          "range": [
            4,
            13,
          ],
          "right": {
            "end": 13,
            "loc": {
              "end": {
                "column": 13,
                "line": 1,
              },
              "start": {
                "column": 12,
                "line": 1,
              },
            },
            "name": "c",
            "range": [
              12,
              13,
            ],
            "start": 12,
            "type": "Identifier",
          },
          "start": 4,
          "type": "AssignmentExpression",
        },
        "start": 0,
        "type": "AssignmentExpression",
      },
      "loc": {
        "end": {
          "column": 14,
          "line": 1,
        },
        "start": {
          "column": 0,
          "line": 1,
        },
      },
      "range": [
        0,
        14,
      ],
      "start": 0,
      "type": "ExpressionStatement",
    },
  ],
  "end": 14,
  "loc": {
    "end": {
      "column": 14,
      "line": 1,
    },
    "start": {
      "column": 0,
      "line": 1,
    },
  },
  "range": [
    0,
    14,
  ],
  "sourceType": "script",
  "start": 0,
  "type": "Program",
}
`;

exports[`Expressions - Assign > Expressions - Assign (pass) > a = b = c = d 1`] = `
{
  "body": [
    {
      "expression": {
        "left": {
          "name": "a",
          "type": "Identifier",
        },
        "operator": "=",
        "right": {
          "left": {
            "name": "b",
            "type": "Identifier",
          },
          "operator": "=",
          "right": {
            "left": {
              "name": "c",
              "type": "Identifier",
            },
            "operator": "=",
            "right": {
              "name": "d",
              "type": "Identifier",
            },
            "type": "AssignmentExpression",
          },
          "type": "AssignmentExpression",
        },
        "type": "AssignmentExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Expressions - Assign > Expressions - Assign (pass) > a = b = c 1`] = `
{
  "body": [
    {
      "expression": {
        "left": {
          "name": "a",
          "type": "Identifier",
        },
        "operator": "=",
        "right": {
          "left": {
            "name": "b",
            "type": "Identifier",
          },
          "operator": "=",
          "right": {
            "name": "c",
            "type": "Identifier",
          },
          "type": "AssignmentExpression",
        },
        "type": "AssignmentExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Expressions - Assign > Expressions - Assign (pass) > a >>= b 1`] = `
{
  "body": [
    {
      "expression": {
        "left": {
          "name": "a",
          "type": "Identifier",
        },
        "operator": ">>=",
        "right": {
          "name": "b",
          "type": "Identifier",
        },
        "type": "AssignmentExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Expressions - Assign > Expressions - Assign (pass) > a >>>= b 1`] = `
{
  "body": [
    {
      "expression": {
        "left": {
          "name": "a",
          "type": "Identifier",
        },
        "operator": ">>>=",
        "right": {
          "name": "b",
          "type": "Identifier",
        },
        "type": "AssignmentExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Expressions - Assign > Expressions - Assign (pass) > a ??= b 1`] = `
{
  "body": [
    {
      "end": 7,
      "expression": {
        "end": 7,
        "left": {
          "end": 1,
          "loc": {
            "end": {
              "column": 1,
              "line": 1,
            },
            "start": {
              "column": 0,
              "line": 1,
            },
          },
          "name": "a",
          "range": [
            0,
            1,
          ],
          "start": 0,
          "type": "Identifier",
        },
        "loc": {
          "end": {
            "column": 7,
            "line": 1,
          },
          "start": {
            "column": 0,
            "line": 1,
          },
        },
        "operator": "??=",
        "range": [
          0,
          7,
        ],
        "right": {
          "end": 7,
          "loc": {
            "end": {
              "column": 7,
              "line": 1,
            },
            "start": {
              "column": 6,
              "line": 1,
            },
          },
          "name": "b",
          "range": [
            6,
            7,
          ],
          "start": 6,
          "type": "Identifier",
        },
        "start": 0,
        "type": "AssignmentExpression",
      },
      "loc": {
        "end": {
          "column": 7,
          "line": 1,
        },
        "start": {
          "column": 0,
          "line": 1,
        },
      },
      "range": [
        0,
        7,
      ],
      "start": 0,
      "type": "ExpressionStatement",
    },
  ],
  "end": 7,
  "loc": {
    "end": {
      "column": 7,
      "line": 1,
    },
    "start": {
      "column": 0,
      "line": 1,
    },
  },
  "range": [
    0,
    7,
  ],
  "sourceType": "script",
  "start": 0,
  "type": "Program",
}
`;

exports[`Expressions - Assign > Expressions - Assign (pass) > a ^= b 1`] = `
{
  "body": [
    {
      "expression": {
        "left": {
          "name": "a",
          "type": "Identifier",
        },
        "operator": "^=",
        "right": {
          "name": "b",
          "type": "Identifier",
        },
        "type": "AssignmentExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Expressions - Assign > Expressions - Assign (pass) > a |= b 1`] = `
{
  "body": [
    {
      "expression": {
        "left": {
          "name": "a",
          "type": "Identifier",
        },
        "operator": "|=",
        "right": {
          "name": "b",
          "type": "Identifier",
        },
        "type": "AssignmentExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Expressions - Assign > Expressions - Assign (pass) > a |= b 2`] = `
{
  "body": [
    {
      "expression": {
        "left": {
          "name": "a",
          "type": "Identifier",
        },
        "operator": "|=",
        "right": {
          "name": "b",
          "type": "Identifier",
        },
        "type": "AssignmentExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Expressions - Assign > Expressions - Assign (pass) > a ||= b 1`] = `
{
  "body": [
    {
      "expression": {
        "left": {
          "name": "a",
          "type": "Identifier",
        },
        "operator": "||=",
        "right": {
          "name": "b",
          "type": "Identifier",
        },
        "type": "AssignmentExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Expressions - Assign > Expressions - Assign (pass) > a -= b 1`] = `
{
  "body": [
    {
      "expression": {
        "left": {
          "name": "a",
          "type": "Identifier",
        },
        "operator": "-=",
        "right": {
          "name": "b",
          "type": "Identifier",
        },
        "type": "AssignmentExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Expressions - Assign > Expressions - Assign (pass) > x = ((y)) = z 1`] = `
{
  "body": [
    {
      "expression": {
        "left": {
          "name": "x",
          "type": "Identifier",
        },
        "operator": "=",
        "right": {
          "left": {
            "name": "y",
            "type": "Identifier",
          },
          "operator": "=",
          "right": {
            "name": "z",
            "type": "Identifier",
          },
          "type": "AssignmentExpression",
        },
        "type": "AssignmentExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;
